--- a/argentbank/src/css/app.css
+++ b/argentbank/src/css/app.css
@@ -117,7 +117,7 @@ input[type="text"] {
 }
 
 .hero {
-  background-image: url('../../public/img/bank-tree.jpeg');
+  background-image: url('../../public/img/bank-tree.webp');
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
